<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_baseline_card_travel_24"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_fb_page"
            android:icon="@drawable/ic_baseline_card_travel_24"
            android:title="@string/menu_fb" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_baseline_card_travel_24"
                    android:title="@string/menu_order" />
                <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_baseline_notifications_24"
                    android:title="@string/menu_notification" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/help">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/settings"/>
            </menu>
        </item>
    </group>
</menu>