<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.profile">

    <!--  ToolBar  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@color/logoBackground">

        <ImageView
            android:id="@+id/profile_back_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <!--  Top Edit  -->
    <LinearLayout
        android:id="@+id/top_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/name"
            app:hintTextColor="#008DD2"
            app:layout_constraintBottom_toTopOf="@+id/user_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:drawableStart="@drawable/ic_baseline_face_24"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:transitionName="username"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_edit_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/number"
            app:hintTextColor="#008DD2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:ems="10"
                android:inputType="number|phone"
                android:paddingStart="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:textColor="#000000"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/settings_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:enabled="false"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill,LabelFor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10sp">
            <Button
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:text="@string/change_password"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/profile_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:text="@string/save"
                android:background="@drawable/button_background"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>